# Yolo_anomalib

./: .coverage  .flake8  .gitattributes  .gitignore  CHANGELOG.md  GUI.py  Inference.py  MVS_camera_control.py  Makefile  PROJECT_MEMORY.md  PROJECT_TODO.md  README.md  activate_env.ps1  build_exe.bat  color_verifier.py  config.example.yaml  config.yaml  diff.txt  fastflow_detector.py  find_lines.py  main.py  patch_gui2.py  patchcore_detector.py  pcba.bat  pyproject.toml  pytest.ini  requirements-compiled.txt  requirements-dev.txt  requirements.txt  start.bat  start_env.bat  test_config.yaml  test_output.txt  verify_build.py  verify_gui_init.py  yolov5_inference_mvscamera_test.py
.gemini/: documentation_final_report.md  documentation_update_report.md  immediate_action_checklist.md  improvement_roadmap.md  p0_completion_report.md  senior_engineer_review.md
.github/workflows/: ci.yml
MvImport/: CameraParams_const.py  CameraParams_header.py  MvCameraControl_class.py  MvErrorDefine_const.py  README.md
Result/: results.xlsx
anomalib_model/PCBA1_A_patchcore_model1/: config.yaml
anomalib_model/PCBA1_B_patchcore_model/: config.yaml
app/: cli.py
app/gui/: __init__.py  auto_inspection_controller.py  camera_handler.py  controller.py  i18n.py  light_handler.py  main_window.py  model_config_dialog.py  preferences.py  utils.py  view_builder.py  widgets.py  workers.py
camera/: MVS_camera_control.py  camera_controller.py  camera_preview.py
camera/preview/: __init__.py  app.py  metrics.py  source.py  window.py
configs/products/: pcba_example.yaml
core/: __init__.py  anomalib_inference_model.py  anomalib_lightning_inference.py  async_pipeline.py  auto_trigger.py  base_model.py  color_checker.py  color_inference_model.py  color_qc_enhanced.py  config.py  config_schema.py  config_validation.py  detection_system.py  detector.py  exceptions.py  format_result.py  fusion_inference.py  inference_engine.py  inference_tokens.py  led_qc_enhanced.py  logger.py  logging_config.py  logging_utils.py  models.py  path_utils.py  performance_test.py  position_validator.py  queues.py  result_adapter.py  result_handler.py  runtime_preflight.py  security.py  stats_color_checker.py  types.py  utils.py  version_utils.py  workers.py  yolo_inference_model.py  yolo_runtime.py
docs/: CAMERA_RUNTIME_DIAGNOSTICS.md  FIRMWARE_RUNTIME_PLAN.md  MODEL_VERSION_GUIDE.md  MODULE_ARCHITECTURE.md  PCBA_INSPECTION_PLAN.md  PCBA_OPERATOR_COMMANDS.md  PCBA_PILOT_ACCEPTANCE_TEMPLATE.md  PCBA_PILOT_RUNBOOK.md  PRODUCTION_GO_LIVE_CHECKLIST.md  PROGRESS_LOG.md  SECURITY.md  TECH_GUIDE.md
reports/: coverage.xml  detector_junit.xml  detector_report.html  junit.xml  result_handler_junit.xml  result_handler_report.html  test_report.html  yolo_junit.xml  yolo_test_report.html
tests/: conftest.py  test_alignment.py  test_annotations.py  test_anomalib_inference_model_functional.py  test_cache_thread_safety.py  test_collect_review_cases.py  test_color_checker.py  test_color_override_loader.py  test_config_parsing.py  test_customer_message.py  test_decision_engine.py  test_deployment_tools.py  test_detection_result_serialization.py  test_detection_system.py  test_detector.py  test_e2e_workflow.py  test_excel_buffer.py  test_export_review_dataset.py  test_failure_crops.py  test_fusion_inference.py  test_gui_smoke.py  test_image_write_queue.py  test_inference_engine_unit.py  test_inspection_metrics.py  test_letterbox_imgsz.py  test_light_controller.py  test_logging_config.py  test_missing_slot_checker.py  test_model_config_editor.py  test_model_manager_overrides.py  test_mvs_camera_guards.py  test_path_utils.py  test_pcba_pilot.py  test_pilot_acceptance_report.py  test_pipeline_finalize_status.py  test_pipeline_registry.py  test_pipeline_start_preflight.py  test_pipeline_steps.py  test_position_summary.py  test_production_readiness_check.py  (+12 more)
tmp/: results.xlsx
tools/: collect_review_cases.py  eval_cable1_goodboards.py  export_review_dataset.py  inspection_metrics.py  migrate_models.py  pcba_pilot.py  pilot_acceptance_report.py  postprocess_build.py  production_readiness_check.py  runtime_benchmark.py  update_config_paths.py  validate_and_deploy_cable1.py  validate_overlay_impact.py  yolo_export.py
(+61 files in other folders)
